删除默认的文件和类列表显示

--- a/.gitignore
+++ b/.gitignore
@@ -154,3 +154,8 @@ $RECYCLE.BIN/
 
 # Mac desktop service store files
 .DS_Store
+/.vs/smali2java/v15/Browse.VC.db
+/.vs/smali2java/v15/Browse.VC.opendb
+/.vs/smalitojava/v15/Browse.VC.db
+/.vs/ProjectSettings.json
+/.vs/slnx.sqlite
