--- a/smali2java/smali2java.vcxproj.filters
+++ b/smali2java/smali2java.vcxproj.filters
@@ -57,6 +57,9 @@
     <ClInclude Include="PropertiesWnd.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="CNewProject.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="smali2java.cpp">
@@ -90,6 +93,9 @@
       <Filter>源文件</Filter>
     </ClCompile>
     <ClCompile Include="PropertiesWnd.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="CNewProject.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
