完善了新建工程的窗口，可以进行根目录选择

--- a/smali2java/smali2java.rc
+++ b/smali2java/smali2java.rc
@@ -408,11 +408,15 @@ END
 
 IDD_DIALOG_NEW_PROJECT DIALOGEX 0, 0, 309, 177
 STYLE DS_SETFONT | DS_MODALFRAME | DS_FIXEDSYS | WS_POPUP | WS_CAPTION | WS_SYSMENU
-CAPTION "Dialog"
+CAPTION "根据smali文件新建工程"
 FONT 8, "MS Shell Dlg", 400, 0, 0x1
 BEGIN
     DEFPUSHBUTTON   "确定",IDOK,198,156,50,14
     PUSHBUTTON      "取消",IDCANCEL,252,156,50,14
+    PUSHBUTTON      "...",IDC_BUTTON_OPEN_ONESMALI,281,7,21,12
+    EDITTEXT        IDC_EDIT_OPEN_PATH,7,7,271,12,ES_AUTOHSCROLL
+    LISTBOX         IDC_LIST_FILE,7,19,295,133,LBS_SORT | LBS_NOINTEGRALHEIGHT | WS_VSCROLL | WS_TABSTOP
+    EDITTEXT        IDC_EDIT_FILE_LIST_INFO,7,156,158,14,ES_AUTOHSCROLL | ES_READONLY
 END
 
 
