--- a/smali2java/smali2java.vcxproj.filters
+++ b/smali2java/smali2java.vcxproj.filters
@@ -66,6 +66,15 @@
     <ClInclude Include="CsmaliView.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="JavaClass.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="JavaInstructItem.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="JavaMethod.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="smali2java.cpp">
@@ -108,6 +117,39 @@
       <Filter>源文件</Filter>
     </ClCompile>
     <ClCompile Include="CsmaliView.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="JavaClass.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="JavaInstructItem.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="JavaMethod.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="JavaMethodCodeTranslate.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="JavaMethodCreateFullRunningVector.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="JavaMethodCreateMacroCodeStruction.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="JavaMethodCreateSegmentList.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="JavaMethodCreateSegmentLoopData.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="JavaMethodTools.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="JavaMethodVariableDefine.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="JavaMethodVariableSpread.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
